# MiniGPT-4

./: pyproject.toml
eval_configs/: skyeyegpt.yaml
src/minigpt4/models/: Qformer.py  base_model.py  eva_vit.py  modeling_llama.py
